fixed CRUD operations fully, logging implemented,  ASP.NET Backend - Sehr Gut #9 finished
