# SRC_Summer/DocumentManager.Webapi/Controllers/FolderController.cs
@@ -41,14 +41,14 @@ public class FolderController : ControllerBase
             {
                 guid = x.Guid,
                 name = x.Name,
-                documents = x.Documents!.Select(x => new
+                documents = x.Documents!.Select(d => new
                 {
-                    guid = x.Guid,
-                    title = x.Title,
-                    content = x.Content,
-                    type = x.Type,
-                    tags = x.Tags.Select(dt => dt.Tag!.Name).ToList(),
-                    version = x.Version
+                    guid = d.Guid,
+                    title = d.Title,
+                    content = d.Content,
+                    type = d.Type,
+                    tags = d.Tags.Select(dt => dt.Tag!.Name).ToList(),
+                    version = d.Version
                 })
             }).ToListAsync();
         return Ok(folders);
@@ -82,7 +82,7 @@ public class FolderController : ControllerBase
     }
 
     // Reacts to /api/folder/10/1
-    [HttpGet("{folderGuid:Guid}/{docguid:Guid}")]
+    [HttpGet("{folderGuid:Guid}/{docGuid:Guid}")]
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(Document))]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     public async Task<IActionResult> GetDocumentInFolderDetailAsync(Guid folderGuid, Guid docGuid)
@@ -106,7 +106,7 @@ public class FolderController : ControllerBase
 
 
     // Reacts to /api/folder/10/1/tags
-    [HttpGet("{folderGuid:Guid}/{docguid:Guid}/tags")]
+    [HttpGet("{folderGuid:Guid}/{docGuid:Guid}/tags")]
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(Tag))]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     public async Task<IActionResult> GetDocumentInFolderTags(Guid folderGuid, Guid docGuid)
@@ -130,7 +130,6 @@ public class FolderController : ControllerBase
     // -------------------------------------------------------
     // HTTP POST
     // -------------------------------------------------------
-
     [HttpPost]
     [Consumes(MediaTypeNames.Application.Json)]
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(Folder))]
@@ -138,6 +137,13 @@ public class FolderController : ControllerBase
     public async Task<IActionResult> AddFolder(FolderDto folderDto)
     {
         var folder = _mapper.Map<Folder>(folderDto);
+        var existingDocuments = await _db.Document.Where(d => folderDto.DocumentTitles.Contains(d.Title)).ToListAsync();
+        foreach (var document in existingDocuments)
+        {
+            document.FolderId = folder.Id;
+        }
+        folder.Documents!.AddRange(existingDocuments);
+        folder.DocumentManagerId = 1;
         _db.Folder.Add(folder);
         try
         {
@@ -148,26 +154,46 @@ public class FolderController : ControllerBase
             return BadRequest();
         }
 
-        return Ok(_mapper.Map<Folder, FolderDto>(folder));
+        return Ok(folder);
     }
-    
-    //create a folder add where it just creates an empty folder
-    //create a folder add that creates an empty folder and just appends a existing document
 
     // -------------------------------------------------------
     // HTTP PUT
     // -------------------------------------------------------
-
     [HttpPut("{guid:Guid}")]
     [Consumes(MediaTypeNames.Application.Json)]
     [ProducesResponseType(StatusCodes.Status204NoContent)]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
-    public async Task<IActionResult> EditFolder(Guid guid, FolderDto folderDto) //works but fix creation of document bug
+    public async Task<IActionResult> EditFolder(Guid guid, FolderDto folderDto)
     {
         if (guid != folderDto.Guid) return BadRequest();
-        var folder = await _db.Folder.FirstOrDefaultAsync(a => a.Guid == guid);
+        var folder = await _db.Folder.Include(f => f.Documents).FirstOrDefaultAsync(a => a.Guid == guid);
         if (folder is null) return NotFound();
+        var existingTitles = folder.Documents!.Select(d => d.Title).ToList();
+        if (existingTitles != folderDto.DocumentTitles)
+        {
+            //if the two lists are not the same, the folder list should be updated with the new folderDto list so that the documents in the folderdto are the ones in the folder
+            var newDocumentTitles = folderDto.DocumentTitles.Except(existingTitles);
+            var deletedDocuments = folder.Documents!.Where(d => !folderDto.DocumentTitles.Contains(d.Title)).ToList();
+
+            foreach (var deletedDoc in deletedDocuments)
+            {
+                deletedDoc.FolderId = null;
+            }
+            foreach (var title in newDocumentTitles)
+            {
+                var newDoc = await _db.Document.Where(d => d.Title == title).FirstOrDefaultAsync();
+                if (newDoc == null)
+                {
+                    return BadRequest();
+                }
+                if (!folder.Documents!.Contains(newDoc))
+                {
+                    folder.Documents!.Add(newDoc);
+                }
+            }
+        }
         _mapper.Map(folderDto, folder);
         try
         {
@@ -177,27 +203,30 @@ public class FolderController : ControllerBase
         {
             return BadRequest();
         }
-
         return NoContent();
     }
+
+
+
 
     // -------------------------------------------------------
     // HTTP DELETE
     // -------------------------------------------------------
-
-    [HttpDelete("{id:int}")]
+    [HttpDelete("{guid:Guid}")]
     [ProducesResponseType(StatusCodes.Status204NoContent)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
-    public async Task<IActionResult> DeleteFolder(int id) //fix
+    public async Task<IActionResult> DeleteFolder(Guid guid)
     {
-        var folder = await _db.Folder.FirstOrDefaultAsync(a => a.Id == id);
+        var folder = await _db.Folder.FirstOrDefaultAsync(a => a.Guid == guid);
         if (folder is null) return NotFound();
-        var documents = folder.Documents;
+        var documents = await _db.Document.Where(d => d.FolderId==folder.Id).ToListAsync();
         if (documents is null) return NotFound();
-        foreach (var document in documents) _db.Document.Remove(document);
+        foreach (var doc in documents)
+        {
+            doc.FolderId = null;
+        }
         _db.Folder.Remove(folder);
-        foreach (var document in documents) _db.Document.Add(document);
         try
         {
             await _db.SaveChangesAsync();
