# SRC_Summer/DocumentManager.Webapi/wwwroot/swagger/v1/swagger.yaml
@@ -346,101 +346,16 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetails'
-  '/api/folders/{folderGuid}/{docguid}':
-    get:
-      tags:
-        - Folder
-      parameters:
-        - name: folderGuid
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-        - name: docGuid
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        '200':
-          description: Success
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/Document'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Document'
-            text/json:
-              schema:
-                $ref: '#/components/schemas/Document'
-        '404':
-          description: Not Found
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-            text/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-  '/api/folders/{folderGuid}/{docguid}/tags':
-    get:
-      tags:
-        - Folder
-      parameters:
-        - name: folderGuid
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-        - name: docGuid
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        '200':
-          description: Success
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/Tag'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Tag'
-            text/json:
-              schema:
-                $ref: '#/components/schemas/Tag'
-        '404':
-          description: Not Found
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-            text/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-  '/api/folders/{id}':
     delete:
       tags:
         - Folder
       parameters:
-        - name: id
+        - name: guid
           in: path
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
+            format: uuid
       responses:
         '204':
           description: No Content
@@ -458,6 +373,90 @@ paths:
                 $ref: '#/components/schemas/ProblemDetails'
         '400':
           description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+  '/api/folders/{folderGuid}/{docGuid}':
+    get:
+      tags:
+        - Folder
+      parameters:
+        - name: folderGuid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: docGuid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Document'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Document'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Document'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+  '/api/folders/{folderGuid}/{docGuid}/tags':
+    get:
+      tags:
+        - Folder
+      parameters:
+        - name: folderGuid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: docGuid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Tag'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tag'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Tag'
+        '404':
+          description: Not Found
           content:
             text/plain:
               schema:
@@ -751,6 +750,10 @@ components:
           type: integer
           format: int32
           readOnly: true
+        folderId:
+          type: integer
+          format: int32
+          nullable: true
       additionalProperties: false
     DocumentDto:
       type: object
@@ -807,6 +810,10 @@ components:
           items:
             $ref: '#/components/schemas/Document'
           nullable: true
+        documentManagerId:
+          type: integer
+          format: int32
+          nullable: true
       additionalProperties: false
     FolderDto:
       type: object
@@ -817,10 +824,10 @@ components:
         name:
           type: string
           nullable: true
-        documents:
+        documentTitles:
           type: array
           items:
-            $ref: '#/components/schemas/Document'
+            type: string
           nullable: true
       additionalProperties: false
     ProblemDetails:
